--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^4.10.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
-    "sinon": "^4.0.2"
+    "sinon": "^4.0.2",
+    "underscore": "^1.8.3"
   }
 }
