--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha ./spec/*",
     "lint": "eslint ./ -- --fix",
     "posttest": "npm run lint",
-    "precommit": "npm test"
+    "precommit": "npm test",
+    "t_": "underscore=true npm test"
   },
   "repository": {
     "type": "git",
