--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "underscore.js"
   ],
   "author": "Dennis Foster",
-  "license": "ISC",
+  "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/Sinnedennis/Lowbar/issues"
   },
@@ -29,7 +29,13 @@
     "eslint": "^4.10.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
-    "sinon": "^4.0.2",
-    "underscore": "^1.8.3"
+    "sinon": "~4.1.2",
+    "underscore": "^1.8.3",
+    "npm-watch": "~0.3.0"
+  },
+  "dependencies": {
+    "chai": "~4.1.2",
+    "sinon": "~4.1.2",
+    "underscore": "~1.8.3"
   }
 }
