--- a/package.json
+++ b/package.json
@@ -26,15 +26,10 @@
   "homepage": "https://github.com/Sinnedennis/Lowbar#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "eslint": "^4.10.0",
+    "eslint": ">=4.18.2",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "sinon": "~4.1.2",
     "underscore": "^1.8.3"
-  },
-  "dependencies": {
-    "chai": "~4.1.2",
-    "sinon": "~4.1.2",
-    "underscore": "~1.8.3"
   }
 }
