--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "sinon": "~4.1.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "diff": ">=3.5.0"
   }
 }
